# personal-finance-assistant

./: .gitignore  README.md
.design-sync/: NOTES.md  config.json  conventions.md  ds-input.css  tailwind.ds.config.cjs
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py  seed.py
backend/app/adapters/: __init__.py  crypto.py  fake_provider.py  firestore_repo.py  memory_repo.py  notifier.py  object_store.py  ocr.py  plaid_provider.py
backend/app/api/: __init__.py  deps.py  routes_accounts.py  routes_alerts.py  routes_budgets.py  routes_items.py  routes_receipts.py  routes_recurring.py  routes_rules.py  routes_settings.py  routes_transactions.py  schemas.py
backend/app/domain/: __init__.py  categories.py  models.py  money.py
backend/app/ports/: __init__.py  bank_provider.py  notifier.py  object_store.py  ocr.py  repository.py
backend/app/services/: __init__.py  alerts.py  anomaly.py  budgets.py  categorization.py  dedup.py  forecast.py  normalize.py  receipts.py  recurring.py  rollups.py  sync.py
backend/tests/: conftest.py  test_alerts.py  test_anomaly.py  test_api.py  test_budgets.py  test_categorization.py  test_dedup.py  test_firestore_repo.py  test_forecast.py  test_money.py  test_normalize.py  test_receipts.py  test_recurring.py  test_sync.py  test_sync_alerts.py
docs/: data-model.md  promo.md  workflow.md
functions/: .env.example  README.md  main.py  plaid_client.py  requirements.txt
infra/: firestore.indexes.json  firestore.rules  storage.rules
mobile/: README.md  pubspec.yaml  (+1 more)
(+96 files in other folders)
