[project]
name = "pfa-backend"
version = "0.1.0"
description = "Personal Finance Assistant — FastAPI backend (sync, categorization, dedup, REST API)"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI uses function calls in argument defaults (Depends/Query)
